backup post content